// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Console em texto puro Apresenta o 'splash' 1`] = `
Object {
  Symbol(act-jest-snapshot-raw): undefined,
  Symbol(act-jest-snapshot-console): "L:/====================v======================================================\\\\
L:|     /////// ////// | AC TOOLS - Extensions for VS-Code and NodeJS   |
L:|    //   // //      | (C) 2020 Alan Candido (BRODAO) <brodao@gmail.com>    |
L:|   /////// //       |                                                      |
L:|  //   // //        | Support tools for TOTVS developers         |
L:| //   // //////     | https://github.com/brodao/workspace/projects/AFPV    |
L:\\\\====================^======================================================/
L:test_show_banner [99.99.99] Show Banner
",
}
`;

exports[`Console em texto puro Aviso com vários agumentos 1`] = `
Object {
  Symbol(act-jest-snapshot-raw): undefined,
  Symbol(act-jest-snapshot-console): "L:Aviso com argumentos
",
}
`;

exports[`Console em texto puro Aviso simples 1`] = `
Object {
  Symbol(act-jest-snapshot-raw): undefined,
  Symbol(act-jest-snapshot-console): "L:Aviso simples
",
}
`;

exports[`Console em texto puro Erro com vários agumentos 1`] = `
Object {
  Symbol(act-jest-snapshot-raw): undefined,
  Symbol(act-jest-snapshot-console): "L:Erro com argumentos
",
}
`;

exports[`Console em texto puro Erro simples 1`] = `
Object {
  Symbol(act-jest-snapshot-raw): undefined,
  Symbol(act-jest-snapshot-console): "L:Erro simples
",
}
`;
